...
        android:layout_height="wrap_content"
        style="@style/TextInputStyle">

        <!-- The EditText has 4dp margin which makes the it look like
        it's not lined up with the text above/below, so remove it with negative margin -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/replyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/replyHint"
            android:inputType="textMultiLine|textCapSentences"

...
            android:id="@+id/markdownButtonsInnerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/markdownHeader"
                android:layout_width="@dimen/markdownBtnWidth"
                android:layout_height="@dimen/markdownBtnHeight"
                android:layout_marginEnd="4dp"
                android:background="@drawable/ripple_rounded_square_button_bg"

                android:textAllCaps="false"
                android:text="@string/markdownBtnHeader"
                android:contentDescription="@string/content_description_markdown_btn_header" />

            <Button
                android:id="@+id/markdownBold"
                android:layout_width="@dimen/markdownBtnWidth"
                android:layout_height="@dimen/markdownBtnHeight"
                android:layout_marginEnd="4dp"
                android:background="@drawable/ripple_rounded_square_button_bg"

                android:text="@string/markdownBtnBold"
                android:contentDescription="@string/content_description_markdown_btn_bold" />

            <Button
                android:id="@+id/markdownItalic"
                android:layout_width="@dimen/markdownBtnWidth"
                android:layout_height="@dimen/markdownBtnHeight"
                android:layout_marginEnd="4dp"
                android:background="@drawable/ripple_rounded_square_button_bg"

                android:text="@string/markdownBtnItalic"
                android:contentDescription="@string/content_description_markdown_btn_italic" />

            <Button
                android:id="@+id/markdownStrikethrough"
                android:layout_width="@dimen/markdownBtnWidth"
                android:layout_height="@dimen/markdownBtnHeight"
                android:layout_marginEnd="4dp"
                android:background="@drawable/ripple_rounded_square_button_bg"

                android:text="@string/markdownBtnStrikethrough"
                android:contentDescription="@string/content_description_markdown_btn_strikethrough" />

            <ImageButton
                android:id="@+id/markdownLink"
                android:layout_width="@dimen/markdownBtnWidth"
                android:layout_height="@dimen/markdownBtnHeight"
                android:layout_marginEnd="4dp"
                android:background="@drawable/ripple_rounded_square_button_bg"

                android:tint="@color/text_color"
                android:src="@drawable/ic_baseline_link_24"
                android:contentDescription="@string/content_description_markdown_btn_link" />

            <!-- This looks kinda weird, would look better if I could add some text after the quote block -->
            <ImageButton
                android:id="@+id/markdownQuote"
                android:layout_width="@dimen/markdownBtnWidth"
                android:layout_height="@dimen/markdownBtnHeight"
                android:layout_marginEnd="4dp"
                android:background="@drawable/ripple_rounded_square_button_bg"

                android:tint="@color/quoteLine"
                android:src="@drawable/quoteblock_drawable"
                android:contentDescription="@string/content_description_markdown_btn_quote" />

            <Button
                android:id="@+id/markdownSpoiler"
                android:layout_width="@dimen/markdownBtnWidth"
                android:layout_height="@dimen/markdownBtnHeight"
                android:layout_marginEnd="4dp"
                android:background="@drawable/ripple_rounded_square_button_bg"

                android:text="@string/markdownSpoiler"
...
