...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialogBackground">

    <TextView
        android:id="@+id/addLinkHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"

...
        style="@style/TextInputStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLinkHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/replyAddLinkDialogLinkTextHint"
            android:inputType="none"

...
        style="@style/TextInputStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutLinkText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/linkText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/replyAddLinkDialogLinkUrlHint"
            android:inputType="text"

            android:textColor="@color/text_color"
            android:textCursorDrawable="@drawable/edit_text_cursor_opposite_bg" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnAddLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"

...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutLinkLink"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnCancelLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonStyleSmall"

        android:layout_marginEnd="16dp"

...
